@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: reahl-dev
-Version: 3.2.0
+Version: 4.0.0
 Summary: The core Reahl development tools.
 Home-page: http://www.reahl.org
 Author: Iwan Vosloo
